--- a/app_server/views/components/panelGruposYRamas.twig
+++ b/app_server/views/components/panelGruposYRamas.twig
@@ -4,5 +4,8 @@
            <li role="presentation" id="id_rama" ><a href="#">Ramas</a></li>
        </ul>
        <div class="list-group" id="gruposyRamas">
+          {% for grupo in grupos %}
+            <button type="button" class="list-group-item" onclick="mostrarRama({{grupo.codigo}})>{{grupo.nombre}}</button>
+          {% endfor %}
        </div>
    </div>
