agregamos filtros y grupos renders

--- a/app_server/views/components/panelGruposYRamas.twig
+++ b/app_server/views/components/panelGruposYRamas.twig
@@ -5,7 +5,7 @@
        </ul>
        <div class="list-group" id="gruposyRamas">
           {% for grupo in grupos %}
-            <button type="button" class="list-group-item" onclick="mostrarRama({{grupo.codigo}})>{{grupo.nombre}}</button>
+            <button type="button" class="list-group-item" onclick="mostrarRama({{grupo.codigo}})">{{grupo.nombre}}</button>
           {% endfor %}
        </div>
    </div>
