--- a/app_server/views/components/renderFiltro.twig
+++ b/app_server/views/components/renderFiltro.twig
@@ -1,8 +1,5 @@
-    <div class="btn-group">
-       <button type="button" data-toggle="dropdown" class="btn btn-default dropdown-toggle">{{filtro.nombre}} <span class="caret"></span></button>
-       <ul class="dropdown-menu">
-         {% for opcion in filtro.opciones %}
-               <li><a href="#">opcion</a></li>
-          {% endfor %} 
-       </ul>
-    </div>
+    <select class="selectpicker" title={{filtro.nombre}}>
+      {% for opcion in filtro.opciones %}
+        <option>{{opcion}}</option>
+      {% endfor %}
+    </select>
