--- a/app_server/views/components/panelGruposYRamas.twig
+++ b/app_server/views/components/panelGruposYRamas.twig
@@ -6,6 +6,6 @@
        <div class="list-group" id="gruposyRamas">
           {% for grupo in grupos %}
             <button type="button" class="list-group-item" onclick="mostrarRama({{grupo.codigo}})">{{grupo.nombre}}</button>
-          {% endfor %}
+          {% endfor %}x
        </div>
    </div>
