--- a/app_server/views/components/navegationBar.twig
+++ b/app_server/views/components/navegationBar.twig
@@ -30,6 +30,10 @@
                                <button type="submit" class="btn btn-default">ingresar</button>
                            </form>
                        </li>
+                       <li>
+                       <p>Iniciar sesi&oacute;n con Facebook:</p>
+                       <fb:login-button perms="email,user_birthday">Iniciar</fb:login-button>
+                       </li>
                    </ul>
 
                </div><!-- /.navbar-collapse -->
@@ -37,4 +41,3 @@
            </div>
 
        </nav>
-
