--- a/app_server/views/components/navegationBar.twig
+++ b/app_server/views/components/navegationBar.twig
@@ -21,18 +21,9 @@
                    </ul>
 
                    <ul class="nav navbar-nav navbar-right">
-                       <li>
-                           <form class="navbar-form navbar-rigth">
-                               <div class="form-group">
-                                   <input type="text" class="form-control" placeholder="Usuario">
-                                   <input type="text" class="form-control" placeholder="Constraseña">
-                               </div>
-                               <button type="submit" class="btn btn-default">ingresar</button>
-                           </form>
-                       </li>
-                       <li>
+                       <li id="contInicio">
                        <p>Iniciar sesi&oacute;n con Facebook:</p>
-                       <fb:login-button perms="email,user_birthday">Iniciar</fb:login-button>
+                       <fb:login-button perms="email,user_birthday" id="inciofb"></fb:login-button>
                        </li>
                    </ul>
 
