visualizacion nuevo comentario

--- a/app_server/views/components/panelContenedorDeComentarios.twig
+++ b/app_server/views/components/panelContenedorDeComentarios.twig
@@ -1,8 +1,8 @@
     <!-- Contenedor de comentarios -->
     <div class="comments-container" id="ComentarioConteiner">
        <h2 id="Titulo_Comentario"></h2>
-       <button type="mostrar" class="btn btn-primary" onclick="visualizarPanel_NuevoCometario()">Añadir comentario</button>
-
+       <button type="mostrar" id="nuevoComentario" class="btn btn-primary" onclick="visualizarPanel_NuevoCometario()">Añadir comentario</button>
+       <h3 id= "warningComentario">Para comentar primero debes estar logeado</h3>
        <ul id="comments-list" class="comments-list">
 
        </ul>
