--- a/app_server/views/components/panelNuevoComentario.twig
+++ b/app_server/views/components/panelNuevoComentario.twig
@@ -1,11 +1,6 @@
     <div class="panel-body" id="panel-nuevoComentario">
        <div class="form-group ">
-           <label for="Nombre">Nombre:</label>
-           <input type="userName" class="form-control" id="Nombre" aria-describedby="emailHelp" cols="30">
-           <small id="ayuda" class="form-text text-muted">Este será el nombre que desea que aparesca junto a el comentario.</small>
-       </div>
-       <div class="form-group ">
-           <label for="comment">Comentario:</label>
+           <label for="comment">Nuevo comentario:</label>
            <textarea class="form-control" rows="3" id="coment" cols="30"></textarea>
        </div>
        <div class="form-group col-xs-8">
