fix isempty comentarios

--- a/app_server/views/components/navegationBar.twig
+++ b/app_server/views/components/navegationBar.twig
@@ -23,7 +23,7 @@
                    <ul class="nav navbar-nav navbar-right">
                        <li id="contInicio">
                        <p>Iniciar sesi&oacute;n con Facebook:</p>
-                       <fb:login-button perms="email,user_birthday" id="inciofb"></fb:login-button>
+                       <fb:login-button perms="email,user_birthday" id="inciofb" data-button-type="login_with"  data-size="large"></fb:login-button>
                        </li>
                    </ul>
 
