arreglo visualizacion posicion

--- a/app_server/views/components/navegationBar.twig
+++ b/app_server/views/components/navegationBar.twig
@@ -22,7 +22,7 @@
 
                    <ul class="nav navbar-nav navbar-right">
                        <li id="contInicio">
-                       <fb:login-button perms="email,user_birthday" id="inciofb" data-auto-logout-link="true" data-button-type="login_with"  data-size="medium"></fb:login-button>
+                       <fb:login-button perms="email,user_birthday,picture" id="inciofb" data-auto-logout-link="true" data-button-type="login_with"  data-size="large"></fb:login-button>
                        </li>
                    </ul>
 
