agrege boton filtros

--- a/app_server/views/components/panelDeFitros.twig
+++ b/app_server/views/components/panelDeFitros.twig
@@ -4,6 +4,6 @@
          {% for filtro in filtros %}
                {% include "components/renderFiltro.twig" %}
           {% endfor %}
-
+            <button type="button" class="btn btn-default .col-md-2">Filtrar</button>
        </div>
     </div>
