visual warning comentario

--- a/public/stylesheets/Formato1.css
+++ b/public/stylesheets/Formato1.css
@@ -23,6 +23,13 @@ body {
 #panelIzquierdo{
     padding-left: 3em;
 }
+#nuevoComentario{
+    float: left;
+    margin-right: 20px;
+}
+#warningComentario{
+    color:red;
+}
 
  #map {
    width: 100%;
