visual centrar mapa

--- a/app_server/views/index.twig
+++ b/app_server/views/index.twig
@@ -9,7 +9,8 @@
                    {% include "components/panelGruposYRamas.twig" %}
                </div>
                <div class="col-md-8" id="panelDerecho">
-                   <div id="map"></div>
+                   <div id="map" class=".col-md-8"></div>
+                   <button type="button" class="btn btn-default .col-md-8" onclick="centrarLugares()">Centrar los grupos del Mapa</button>
                </div>
            </div>
            <div class="row" id="margen"><h1>   </h1></div>
