visual boton centrar mapa mas zoom

--- a/public/stylesheets/Formato2.css
+++ b/public/stylesheets/Formato2.css
@@ -36,6 +36,10 @@ body {
     border-width:0px;
     box-shadow:none;
 }
+
+#centrado{
+   width: 100%;
+}
  #map {
    width: 100%;
    height: 400px;
