--- a/public/stylesheets/Formato2.css
+++ b/public/stylesheets/Formato2.css
@@ -4,7 +4,7 @@ body {
    font-family: Georgia, "Times New Roman",
         Times, serif;
   color: white;
-  background-color: #a94442; 
+  background-color: #a94442;
 }
 
 #panelTOTAL{
@@ -26,9 +26,12 @@ body {
 	font-size:24px;
  }
 
+ #comments-list{
+   width: 100%;
+ }
 
 #filtros{
-    height: 100%; 
+    height: 100%;
     width:100%;
     background-color: #f5e79e;
     color:#222222;
@@ -43,7 +46,7 @@ body {
  #map {
    width: 100%;
    height: 400px;
-	background-color: #a94442; 
+	background-color: #a94442;
  }
 #DivGruposyRamas{
     float: top;
@@ -71,7 +74,7 @@ body {
 #margen{
      background-color: #a94442;
  }
- 
+
 #margen1{
      background-color: #a94442;
   height:200 px;
@@ -112,7 +115,7 @@ body {
 }
 #media{
     width: 80%;
-    
+
     margin-right:20px;
 }
 .panel-info{
@@ -120,14 +123,14 @@ body {
 	margin:20px;
 }
 /* carousel */
-.media-carousel 
+.media-carousel
 {
   margin-bottom: 0;
   padding: 0 40px 30px 40px;
   margin-top: 30px;
 }
 /* Previous button  */
-.media-carousel .carousel-control.left 
+.media-carousel .carousel-control.left
 {
   left: -12px;
   background-image: none;
@@ -139,7 +142,7 @@ body {
   margin-top: 30px
 }
 /* Next button  */
-.media-carousel .carousel-control.right 
+.media-carousel .carousel-control.right
 {
   right: -12px !important;
   background-image: none;
@@ -151,7 +154,7 @@ body {
   margin-top: 30px
 }
 /* Changes the position of the indicators */
-.media-carousel .carousel-indicators 
+.media-carousel .carousel-indicators
 {
   right: 50%;
   top: auto;
@@ -159,11 +162,11 @@ body {
   margin-right: -19px;
 }
 /* Changes the colour of the indicators */
-.media-carousel .carousel-indicators li 
+.media-carousel .carousel-indicators li
 {
   background: #c0c0c0;
 }
-.media-carousel .carousel-indicators .active 
+.media-carousel .carousel-indicators .active
 {
   background: #333333;
 }
@@ -215,7 +218,7 @@ ul {
 }
 
 .comments-list {
-     overflow-y:scroll; 
+     overflow-y:scroll;
 	margin-top: 30px;
 	position: relative;
 }
