--- a/app_server/views/layout.twig
+++ b/app_server/views/layout.twig
@@ -17,7 +17,7 @@
   <script type="text/javascript" src="/javascripts/Mapas.js"></script>
 
 
-  <link  id="cssArchivo" rel="stylesheet" type="text/css" />
+  <link  id="cssArchivo" rel="stylesheet" type="text/css" href = "/stylesheets/Formato2.css" />
 
   <!-- Para los Selects -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/css/bootstrap-select.min.css">
@@ -28,13 +28,6 @@
   <body>
     {% block body %}{% endblock %}
     <script src='javascripts/js.js'></script>
-    <script>
-        $(document).ready(function () {
-            cargarArchivoCSS();
-            //inicializarAlmacenamiento_local();
-        });
-    </script>
-
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
