--- a/public/stylesheets/Formato1.css
+++ b/public/stylesheets/Formato1.css
@@ -73,6 +73,9 @@ h2{
   background-color:#003557;
   margin:40px;
 }
+#iniciofb{
+    padding-right: 10px;
+}
 #panelImagenes{
   background-color:#003557;
   margin-left: 20px;
