--- a/public/stylesheets/Formato2.css
+++ b/public/stylesheets/Formato2.css
@@ -61,6 +61,10 @@ body {
     padding-top:25px;
     height:100%;
 }
+
+#iniciofb{
+    padding-right: 10px;
+}
 #BotonFiltro1{
     padding: 1em;
 }
