--- a/public/stylesheets/Formato2.css
+++ b/public/stylesheets/Formato2.css
@@ -92,6 +92,10 @@ body {
     color:black;
     width: 100%;
 }
+
+.navbar-right{
+    margin-top:5px;
+}
 #panelImagenes{
 	border-width:1px;
 	border-color:#000000;
