--- a/public/stylesheets/Formato2.css
+++ b/public/stylesheets/Formato2.css
@@ -1,6 +1,6 @@
 body {
-   padding-left: 5em;
-   padding-right: 5em;
+   padding-left: 0;
+   padding-right:0;
    font-family: Georgia, "Times New Roman",
         Times, serif;
   color: white;
