--- a/app_server/views/components/renderFiltro.twig
+++ b/app_server/views/components/renderFiltro.twig
@@ -1,4 +1,4 @@
-    <select class="selectpicker .col-md-2" title={{filtro.nombre}}>
+    <select class="selectpicker .col-md-2" data-size="3" title={{filtro.nombre}}>
       {% for opcion in filtro.opciones %}
         <option>{{opcion}}</option>
       {% endfor %}
