--- a/public/stylesheets/Formato2.css
+++ b/public/stylesheets/Formato2.css
@@ -226,9 +226,15 @@ ul {
 }
 
 .comments-list {
-     overflow-y:scroll;
+    overflow-y:scroll;
+    padding-right: 10px;
+
+    height: :350px;
 	margin-top: 30px;
 	position: relative;
+}
+.comment-box{
+  width: 90%;
 }
 
 /**
