--- a/public/stylesheets/Formato2.css
+++ b/public/stylesheets/Formato2.css
@@ -228,12 +228,12 @@ ul {
 .comments-list {
     overflow-y:scroll;
     padding-right: 10px;
-
     height: :350px;
 	margin-top: 30px;
 	position: relative;
 }
-.comment-box{
+
+#commentbox{
   width: 90%;
 }
 
