--- a/public/stylesheets/Formato1.css
+++ b/public/stylesheets/Formato1.css
@@ -218,7 +218,7 @@ ul {
 .comments-container {
     padding-top: 4em;
 	margin: 60px auto 15px;
-	width: 768px;
+	width: 80%;
 }
 
 .comments-container h1 {
@@ -438,6 +438,7 @@ ul {
 @media only screen and (max-width: 766px) {
 	.comments-container {
 		width: 480px;
+
 	}
 
 	.comments-list .comment-box {
