--- a/public/stylesheets/Formato2.css
+++ b/public/stylesheets/Formato2.css
@@ -211,7 +211,7 @@ ul {
 
 .comments-container {
 	margin: 60px auto 15px;
-	width: 	80%;;
+	width: 70%;
 }
 
 .comments-container h1 {
@@ -425,6 +425,9 @@ ul {
     padding-right: 1em;
 }
 
+#comments-list{
+  height: 350px;
+}
 
 /** =====================
  * Responsive
