--- a/app_server/views/layout.twig
+++ b/app_server/views/layout.twig
@@ -17,13 +17,15 @@
   <script type="text/javascript" src="/javascripts/Mapas.js"></script>
 
 
-  <link  id="cssArchivo" rel="stylesheet" type="text/css" href = "/stylesheets/Formato2.css" />
 
   <!-- Para los Selects -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/css/bootstrap-select.min.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/bootstrap-select.min.js"></script>
+  <!link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/css/bootstrap-select.min.css">
+  <!script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/bootstrap-select.min.js"><!/script>
 
+  <script type="text/javascript" src="/javascripts/multiple-select.js"></script>
+  <link rel="stylesheet" type="text/css" href = "/stylesheets/multiple-select.css" />
 
+  <link  id="cssArchivo" rel="stylesheet" type="text/css" href = "/stylesheets/Formato2.css" />
   </head>
   <body>
     {% block body %}{% endblock %}
