--- a/app_server/views/components/renderFiltro.twig
+++ b/app_server/views/components/renderFiltro.twig
@@ -1,4 +1,4 @@
-    <select class=".col-md-2" data-size="3" placeholder={{filtro.nombre}}>
+    <select class=".col-md-2" data-size="3" id="filtro" placeholder={{filtro.nombre}}>
       {% for opcion in filtro.opciones %}
         <option value="{{opcion}}">{{opcion}}</option>
       {% endfor %}
