--- a/app_server/views/layout.twig
+++ b/app_server/views/layout.twig
@@ -12,23 +12,22 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="javascripts/javascript.js" type="text/javascript"></script>
-  <script type="text/javascript" src="/javascripts/multiple-select.js"></script>
   <script type="text/javascript" src="/javascripts/GruposyRamas.js"></script>
   <script type="text/javascript" src="/javascripts/GaleriaseImagenes.js"></script>
   <script type="text/javascript" src="/javascripts/Mapas.js"></script>
 
 
+  <link  id="cssArchivo" rel="stylesheet" type="text/css" href = "/stylesheets/Formato2.css" />
 
   <!-- Para los Selects -->
-  <!link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/css/bootstrap-select.min.css">
-  <!script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/bootstrap-select.min.js"><!/script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/css/bootstrap-select.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/bootstrap-select.min.js"></script>
 
-  <link rel="stylesheet" type="text/css" href = "/stylesheets/multiple-select.css" />
 
-  <link  id="cssArchivo" rel="stylesheet" type="text/css" href = "/stylesheets/Formato2.css" />
   </head>
   <body>
     {% block body %}{% endblock %}
+    <script src='javascripts/js.js'></script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
