--- a/app_server/views/layout.twig
+++ b/app_server/views/layout.twig
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap -->
   <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
+  <link rel="stylesheet" href="/stylesheets/multiple-select.css">
   <link rel="stylesheet" href="/lightbox/css/lightbox.min.css">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -15,6 +16,9 @@
   <script type="text/javascript" src="/javascripts/GruposyRamas.js"></script>
   <script type="text/javascript" src="/javascripts/GaleriaseImagenes.js"></script>
   <script type="text/javascript" src="/javascripts/Mapas.js"></script>
+
+
+  <script type="text/javascript" src="/javascripts/multiple-select.js"></script>
 
 
   <link  id="cssArchivo" rel="stylesheet" type="text/css" href = "/stylesheets/Formato2.css" />
