--- a/app_server/views/components/panelDeFitros.twig
+++ b/app_server/views/components/panelDeFitros.twig
@@ -5,5 +5,15 @@
                {% include "components/renderFiltro.twig" %}
           {% endfor %}
             <button type="button" class="btn btn-primary .col-md-2">Filtrar</button>
+            <select>
+            <select multiple="multiple">
+                <option value="1">First</option>
+                <option value="4" selected="selected">Fourth</option>
+            </select>
+            <script>
+                $("select").multipleSelect({
+                    single: true
+                });
+            </script>
        </div>
     </div>
