--- a/app_server/views/components/renderFiltro.twig
+++ b/app_server/views/components/renderFiltro.twig
@@ -1,4 +1,4 @@
-    <select class=".col-md-2" id={{filtro.nombre}}>
+    <select class="col-md-6" id={{filtro.nombre}}>
       {% for opcion in filtro.opciones %}
         <option value="{{opcion}}">{{opcion}}</option>
       {% endfor %}
