--- a/app_server/views/components/panelDeFitros.twig
+++ b/app_server/views/components/panelDeFitros.twig
@@ -4,16 +4,6 @@
          {% for filtro in filtros %}
                {% include "components/renderFiltro.twig" %}
           {% endfor %}
-            <button type="button" class="btn btn-primary .col-md-2">Filtrar</button>
-            
-            <select multiple="multiple">
-                <option value="1">First</option>
-                <option value="4" selected="selected">Fourth</option>
-            </select>
-            <script>
-                $("select").multipleSelect({
-                    single: true
-                });
-            </script>
+            <button type="button" class="btn btn-primary col-md-6">Filtrar</button>
        </div>
     </div>
