--- a/app_server/views/components/panelDeFitros.twig
+++ b/app_server/views/components/panelDeFitros.twig
@@ -1,6 +1,6 @@
     <div class="panel" id="filtros">
        <div><center><h3 id="filtroTag">Filtrar Resultados</h3></center></div>
-       <div>
+       <div id="selectsFiltros">
          {% for filtro in filtros %}
                {% include "components/renderFiltro.twig" %}
           {% endfor %}
