--- a/app_server/views/components/panelDeFitros.twig
+++ b/app_server/views/components/panelDeFitros.twig
@@ -4,6 +4,6 @@
          {% for filtro in filtros %}
                {% include "components/renderFiltro.twig" %}
           {% endfor %}
-            <button type="button" id="botonFiltro" onclick="filtrar" class="btn btn-primary col-md-5 btn-xs">Filtrar</button>
+            <button type="button" id="botonFiltro" class="btn btn-primary col-md-5 btn-xs">Filtrar</button>
        </div>
     </div>
