--- a/app_server/views/components/panelDeFitros.twig
+++ b/app_server/views/components/panelDeFitros.twig
@@ -4,7 +4,7 @@
          {% for filtro in filtros %}
                {% include "components/renderFiltro.twig" %}
           {% endfor %}
-            <button type="button" id="botonFiltro" class="btn btn-primary col-md-5 btn-xs">Filtrar</button>
-            <button type="button" id="botonBorrarFiltro" class="btn btn-primary col-md-5 btn-xs">Borrar Filtro</button>
+            <button type="button" id="botonFiltro" class="btn btn-primary col-md-10 btn-xs">Filtrar</button>
+            <button type="button" id="botonBorrarFiltro" class="btn btn-danget col-md-10 btn-xs">Borrar Filtro</button>
        </div>
     </div>
