--- a/app_server/views/components/panelDeFitros.twig
+++ b/app_server/views/components/panelDeFitros.twig
@@ -5,6 +5,6 @@
                {% include "components/renderFiltro.twig" %}
           {% endfor %}
             <button type="button" id="botonFiltro" class="btn btn-primary col-md-10 btn-xs">Filtrar</button>
-            <button type="button" id="botonBorrarFiltro" class="btn btn-danget col-md-10 btn-xs">Borrar Filtro</button>
+            <button type="button" id="botonBorrarFiltro" class="btn btn-danger col-md-10 btn-xs">Borrar Filtro</button>
        </div>
     </div>
