--- a/app_server/views/components/navegationBar.twig
+++ b/app_server/views/components/navegationBar.twig
@@ -22,8 +22,8 @@
 
                    <ul class="nav navbar-nav navbar-right">
                        <li id="contInicio">
-                       <fb:login-button perms="email,user_birthday,picture" id="inciofb" data-auto-logout-link="true" data-button-type="login_with"  data-size="large"></fb:login-button>
-                       </li>
+                       <a class="btn btn-login waves-effect waves-light" data-toggle="modal">Login</a>
+                     </li>
                    </ul>
 
                </div><!-- /.navbar-collapse -->
