Filtro grupo visual

--- a/app_server/views/layout.twig
+++ b/app_server/views/layout.twig
@@ -20,6 +20,7 @@
   <script type="text/javascript" src="/javascripts/GruposyRamas.js"></script>
   <script type="text/javascript" src="/javascripts/GaleriaseImagenes.js"></script>
   <script type="text/javascript" src="/javascripts/Mapas.js"></script>
+  <script type="text/javascript" src="/javascripts/filtros.js"></script>
 
   <link  id="cssArchivo" rel="stylesheet" type="text/css" href = "/stylesheets/Formato2.css" />
 
