probando login com modal

--- a/app_server/views/components/navegationBar.twig
+++ b/app_server/views/components/navegationBar.twig
@@ -22,7 +22,7 @@
 
                    <ul class="nav navbar-nav navbar-right">
                        <li id="contInicio">
-                       <a class="btn btn-login waves-effect waves-light" id="login" data-toggle="modal">Login</a>
+                       <a class="btn btn-login waves-effect waves-light" id="login" data-toggle="#ModalForm">Login</a>
                      </li>
                    </ul>
 
