--- a/app_server/views/index.twig
+++ b/app_server/views/index.twig
@@ -33,7 +33,7 @@
 
        {% block modalLogin %}
             <!-- Modal -->
-            <div class="modal fade" id="ModalForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal fade" id="elegantModalForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                    <div class="modal-dialog" role="document">
                        <!--Content-->
                        <div class="modal-content form-elegant">
@@ -46,6 +46,13 @@
                            </div>
                            <!--Body-->
                            <div class="modal-body mx-4">
+                           
+                              <div class="row my-1 d-flex justify-content-center">
+                                <!--Facebook-->
+                                <a href="/login/facebook">
+                                   <button type="button" class="btn btn-lg btn-fb waves-effect waves-light"><i class="fa fa-facebook pr-1"></i>Facebook</button></a>
+                              </div>
+
                                <!--Body-->
                                <div class="md-form mb-5">
                                    <input type="email" id="Form-email1" class="form-control validate">
@@ -63,11 +70,7 @@
                                </div>
                                <p class="font-small dark-grey-text text-right d-flex justify-content-center mb-3 pt-2"> o Ingresa con:</p>
 
-                                   <div class="row my-1 d-flex justify-content-center">
-                                       <!--Facebook-->
-                                       <a href="/login/facebook">
-                                           <button type="button" class="btn btn-lg btn-fb waves-effect waves-light"><i class="fa fa-facebook pr-1"></i>Facebook</button></a>
-                                   </div>
+
                            </div>
                            <!--Footer-->
                            <div class="modal-footer mx-5 pt-3 mb-1">
