--- a/app_server/views/index.twig
+++ b/app_server/views/index.twig
@@ -49,7 +49,7 @@
 
                               <div class="row my-1 d-flex justify-content-center">
                                 <!--Facebook-->
-                                <a href="/login/facebook">
+                                <a href="/auth/facebook">
                                    <button type="button" class="btn btn-lg btn-fb waves-effect waves-light"><i class="fa fa-facebook pr-1"></i>Facebook</button></a>
                               </div>
 
