--- a/app_server/views/index.twig
+++ b/app_server/views/index.twig
@@ -49,15 +49,15 @@
 
                               <div class="row my-1 d-flex justify-content-center">
                                 <!--Facebook-->
-                                <a href="/auth/facebook">
+                                <a href="auth/twitter">
+                                   <button type="button" class="btn btn-lg btn-tw waves-effect waves-light"><i class="fa fa-twitter pr-1"></i>twitter</button></a>
+                              </div>
+                              <div class="row my-1 d-flex justify-content-center">
+                                <!--Facebook-->
+                                <a href="auth/facebook">
                                    <button type="button" class="btn btn-lg btn-fb waves-effect waves-light"><i class="fa fa-facebook pr-1"></i>Facebook</button></a>
                               </div>
 
-
-                           <!--Footer-->
-                           <div class="modal-footer mx-5 pt-3 mb-1">
-                               <p class="font-small grey-text d-flex justify-content-end">No sos miembro? <a href="#" class="blue-text ml-1"> Registrarse</a></p>
-                           </div>
                        </div>
                        <!--/.Content-->
                    </div>
