--- a/app_server/views/components/navegationBar.twig
+++ b/app_server/views/components/navegationBar.twig
@@ -23,7 +23,7 @@
                    <ul class="nav navbar-nav navbar-right">
                        <li id="contInicio">
                        {% if user %}
-                          <a class="btn btn-login waves-effect waves-light" href='logout' >Logout</a>
+                          <a class="btn btn-login waves-effect waves-light" href='logout/facebook' >Logout</a>
                       {% else%}
                           <a class="btn btn-login waves-effect waves-light" data-toggle="modal" data-target="#elegantModalForm">Login</a>
                       {% endif %}
