--- a/app_server/views/index.twig
+++ b/app_server/views/index.twig
@@ -49,12 +49,7 @@
 
                               <div class="row my-1 d-flex justify-content-center">
                                 <!--Facebook-->
-                                <a href="auth/twitter">
-                                   <button type="button" class="btn btn-lg btn-tw waves-effect waves-light"><i class="fa fa-twitter pr-1"></i>twitter</button></a>
-                              </div>
-                              <div class="row my-1 d-flex justify-content-center">
-                                <!--Facebook-->
-                                <a href="auth/facebook">
+                                <a href="login/facebook">
                                    <button type="button" class="btn btn-lg btn-fb waves-effect waves-light"><i class="fa fa-facebook pr-1"></i>Facebook</button></a>
                               </div>
 
