--- a/app_server/views/components/navegationBar.twig
+++ b/app_server/views/components/navegationBar.twig
@@ -23,6 +23,7 @@
                    <ul class="nav navbar-nav navbar-right">
 
                        {% if user %}
+                       <img class="img-login" src={{user.photo}}> {{user.username}}
                        <li class="nav-item" id="logout">
                           <a class="btn btn-login waves-effect waves-light" href='/logout' >Logout</a>
                        </li>
