--- a/app_server/views/index.twig
+++ b/app_server/views/index.twig
@@ -33,31 +33,39 @@
 
        {% block modalLogin %}
             <!-- Modal -->
-            <div class="modal fade" id="elegantModalForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                   <div class="modal-dialog" role="document">
-                       <!--Content-->
-                       <div class="modal-content form-elegant">
-                           <!--Header-->
-                           <div class="modal-header text-center">
-                               <h2 class="modal-title w-100 dark-grey-text font-weight-bold my-3" id="myModalLabel"><strong>Ingresar</strong></h2>
-                               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                   <span aria-hidden="true">&times;</span>
-                               </button>
-                           </div>
-                           <!--Body-->
-                           <div class="modal-body mx-4">
 
-                              <div class="row my-1 d-flex justify-content-center">
-                                <!--Facebook-->
-                                <a href="/auth/twitter">
-                                   <button type="button" class="btn btn-lg btn-fb waves-effect waves-light"><i class="fa fa-facebook pr-1"></i>twitter</button></a>
-                              </div>
+           <div class="modal fade" id="elegantModalForm" role="dialog">
+             <div class="modal-dialog">
 
-                       </div>
-                       <!--/.Content-->
-                   </div>
+               <!-- Modal content-->
+               <div class="modal-content">
+                 <div class="modal-header" style="padding:35px 50px;">
+                   <button type="button" class="close" data-dismiss="modal">&times;</button>
+                   <h4><span class="glyphicon glyphicon-lock"></span> Iniciar sesion</h4>
+                 </div>
+                 <div class="modal-body" style="padding:40px 50px;">
+                   <form role="form">
+                     <div class="form-group">
+                       <label for="usrname"><span class="glyphicon glyphicon-user"></span> Username</label>
+                       <input type="text" class="form-control" id="usrname" placeholder="Enter email">
+                     </div>
+                     <div class="form-group">
+                       <label for="psw"><span class="glyphicon glyphicon-eye-open"></span> Password</label>
+                       <input type="text" class="form-control" id="psw" placeholder="Enter password">
+                     </div>
+                       <button type="submit" class="btn btn-success btn-block"><span class="glyphicon glyphicon-off"></span> Login</button>
+                   </form>
+                 </div>
+                 <div class="modal-footer">
+                 <p>Redes sociales disponibles actualmente:</p>
+                 <button href="/auth/twitter" type="button" class="btn btn-lg btn-fb waves-effect waves-light"><i class="fa fa-facebook pr-1"></i>twitter</button></a>
+
+                 </div>
                </div>
-               <!-- Modal -->
-           {% endblock %}
+
+             </div>
+           </div>
+         </div>
+
 
 {% endblock %}
