--- a/public/stylesheets/Formato2.css
+++ b/public/stylesheets/Formato2.css
@@ -461,3 +461,29 @@ ul {
 	}
 }
 
+
+.btn-login {
+    -moz-user-select: none;
+    background: #2A49A5;
+    border: 1px solid #082783;
+    box-shadow: 0 1px #4C6BC7 inset;
+    color: white;
+    padding: 3px 5px;
+    text-decoration: none;
+    text-shadow: 0 -1px 0 #082783;
+    font: 12px Verdana, sans-serif;
+}
+
+.img-login {
+  width: 50px; height: 50px;
+}
+
+.modal-header, h4, .close {
+      background-color: #b85c6f;
+      color:white !important;
+      text-align: center;
+      font-size: 30px;
+  }
+  .modal-footer {
+      background-color: #f9f9f9;
+  }
