--- a/app_server/views/index.twig
+++ b/app_server/views/index.twig
@@ -41,7 +41,7 @@
                <div class="modal-content">
                  <div class="modal-header" style="padding:35px 50px;">
                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                   <h4><span class="glyphicon glyphicon-lock"></span> Iniciar sesion</h4>
+                   <h4><span class=" glyp"></span> INICIAR SESION</h4>
                  </div>
                  <div class="modal-body" style="padding:40px 50px;">
                    <form role="form">
@@ -53,13 +53,16 @@
                        <label for="psw"><span class="glyphicon glyphicon-eye-open"></span> Password</label>
                        <input type="text" class="form-control" id="psw" placeholder="Enter password">
                      </div>
-                       <button type="submit" class="btn btn-success btn-block"><span class="glyphicon glyphicon-off"></span> Login</button>
+                       <button type="submit" class="btn btn-success btn-block"><span class=" glyp"></span> Login</button>
                    </form>
+
+                  <hr>
+                   <p> o ingresa usando las redes sociales disponibles actualmente:</p>
+                   <a href="/auth/twitter">
+                   <button  type="button" class="btn btn-lg btn-fb waves-effect waves-light"><i class="fa fa-facebook pr-1"></i>twitter</button></a>
+
                  </div>
                  <div class="modal-footer">
-                 <p>Redes sociales disponibles actualmente:</p>
-                 <button href="/auth/twitter" type="button" class="btn btn-lg btn-fb waves-effect waves-light"><i class="fa fa-facebook pr-1"></i>twitter</button></a>
-
                  </div>
                </div>
 
