--- a/public/stylesheets/Formato1.css
+++ b/public/stylesheets/Formato1.css
@@ -484,12 +484,20 @@ ul {
   width: 50px; height: 50px;
 }
 
-.modal-header, h4, .close {
+.modal-header,  .close {
       background-color: ##5c74b8;
       color:white !important;
       text-align: center;
       font-size: 30px;
   }
-  .modal-footer {
-      background-color: #f9f9f9;
+  .modal-body {
+      background-color: #f2efef;
+      color:#6b6a6a;
   }
+
+.btn-lg{
+  margin: 0 auto;
+  display: inline-block;
+  background: #55ACEE;
+  color: white;
+}
