--- a/app_server/views/index.twig
+++ b/app_server/views/index.twig
@@ -57,7 +57,7 @@
                    </form>
 
                   <hr>
-                   <p> o ingresa usando las redes sociales disponibles actualmente:</p>
+                   <p> Tambien puedes ingresa usando las redes sociales disponibles actualmente:</p>
                    <a href="/auth/twitter">
                    <button  type="button" class="btn btn-lg btn-fb waves-effect waves-light"><i class="fa fa-facebook pr-1"></i>twitter</button></a>
 
