--- a/app_server/views/index.twig
+++ b/app_server/views/index.twig
@@ -44,20 +44,9 @@
                    <h4><span class=" glyp"></span> INICIAR SESION</h4>
                  </div>
                  <div class="modal-body" style="padding:40px 50px;">
-                   <form role="form">
-                     <div class="form-group">
-                       <label for="usrname"><span class="glyphicon glyphicon-user"></span> Username</label>
-                       <input type="text" class="form-control" id="usrname" placeholder="Enter email">
-                     </div>
-                     <div class="form-group">
-                       <label for="psw"><span class="glyphicon glyphicon-eye-open"></span> Password</label>
-                       <input type="text" class="form-control" id="psw" placeholder="Enter password">
-                     </div>
-                       <button type="submit" class="btn btn-success btn-block"><span class=" glyp"></span> Login</button>
-                   </form>
 
                   <hr>
-                   <p> Tambien puedes ingresa usando las redes sociales disponibles actualmente:</p>
+                   <p> Puedes ingresa usando las redes sociales disponibles actualmente:</p>
                    <a href="/auth/twitter">
                    <button  type="button" class="btn btn-lg btn-fb waves-effect waves-light"><i class="fa fa-facebook pr-1"></i>twitter</button></a>
 
