--- a/app_server/views/index.twig
+++ b/app_server/views/index.twig
@@ -50,6 +50,9 @@
                    <a href="/auth/twitter">
                    <button  type="button" class="btn btn-lg btn-fb waves-effect waves-light"><i class="fa fa-facebook pr-1"></i>twitter</button></a>
 
+                   <a href="/auth/google">
+                   <button  type="button" class="btn btn-lg btn-Gl waves-effect waves-light"><i class="fa fa-facebook pr-1"></i>Google +</button></a>
+
                  </div>
                  <div class="modal-footer">
                  </div>
