--- a/public/stylesheets/Formato1.css
+++ b/public/stylesheets/Formato1.css
@@ -495,7 +495,7 @@ ul {
       color:#6b6a6a;
   }
 
-.btn-lg{
+.btn-fb{
   margin: 0 auto;
   display: inline-block;
   background: #55ACEE;
@@ -504,5 +504,9 @@ ul {
 }
 
 .btn-Gl{
-  background: #ff0505;
+  margin: 0 auto;
+  display: inline-block;
+    background: #ff0505;
+  color: white;
+  margin-left: 40%;
 }
