--- a/public/stylesheets/Formato1.css
+++ b/public/stylesheets/Formato1.css
@@ -506,7 +506,7 @@ ul {
 .btn-Gl{
   margin: 0 auto;
   display: inline-block;
-    background: #ff0505;
+    background: #dd4b39;
   color: white;
   margin-left: 40%;
 }
