--- a/public/stylesheets/Formato1.css
+++ b/public/stylesheets/Formato1.css
@@ -496,7 +496,7 @@ ul {
   }
 
 .btn-fb{
-  margin: 0 auto;
+  margin: 5px;
   display: inline-block;
   background: #55ACEE;
   color: white;
@@ -504,7 +504,7 @@ ul {
 }
 
 .btn-Gl{
-  margin: 0 auto;
+  margin: 5px;
   display: inline-block;
     background: #dd4b39;
   color: white;
