--- a/app_server/views/index.twig
+++ b/app_server/views/index.twig
@@ -53,7 +53,9 @@
                    <a href="/auth/google">
                    <button  type="button" class="btn btn-lg btn-Gl waves-effect waves-light"><i class="fa fa-facebook pr-1"></i>Google +</button></a>
 
-                 </div>
+                   </div>
+                   <div class="modal-footer">
+                   </div>
                </div>
 
              </div>
