--- a/public/stylesheets/Formato2.css
+++ b/public/stylesheets/Formato2.css
@@ -485,7 +485,7 @@ ul {
       text-align: center;
       font-size: 30px;
   }
-  .modal-body {
+  .modal-body, .modal-footer{ 
       background-color: #f2efef;
       color:#6b6a6a;
   }
