--- a/app_server/views/components/navegationBar.twig
+++ b/app_server/views/components/navegationBar.twig
@@ -13,6 +13,9 @@
                    <ul class="nav navbar-nav">
                        <li class="btn-group">
                            <a href="https://scouts-admin.herokuapp.com/grupos">Pagina de Administracion</a>
+                      </li>
+                       <li class="btn-group">
+                           <a href="https://scouts-admin.herokuapp.com/grupos">Pagina de Administracion</a>
                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Estilos <span class="caret"></span></a>
                            <ul class="dropdown-menu">
                                <li><a href="#" onclick="cambiarArchivoCss('stylesheets/Formato1.css')">Estilo 1</a></li>
