--- a/app_server/views/components/navegationBar.twig
+++ b/app_server/views/components/navegationBar.twig
@@ -32,7 +32,7 @@
                        </li>
                       {% else%}
                       <li class="nav-item" id="login">
-                          <div class="text-center">
+                          <div class="text-center" id="log">
                             <a class="btn btn-login waves-effect waves-light" data-toggle="modal" data-target="#elegantModalForm" id="login" >Login</a>
                           </div>
                       </li>
