--- a/public/stylesheets/Formato2.css
+++ b/public/stylesheets/Formato2.css
@@ -506,3 +506,10 @@ ul {
     color: white;
     margin-left: 40%;
   }
+#login {
+    display: table-cell;
+    vertical-align: middle;
+}
+#log {
+    display: table;
+}
